# data-engineering-cohort-1

./: SQL 101.ipynb  mongodb_demo.ipynb
Python 101/: app.py
Python 101 with solution/: app.py  pyproject.toml
Python 101 with solution/data/: customers.csv  orders.csv
Python 101 with solution/notebooks/: python_101_live.ipynb
Python 101 with solution/src/: data_loader.py
